[package]
name = "jsonrpsee-rpc"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1"
futures = "0.3"
jsonrpsee = { git = "https://github.com/paritytech/jsonrpsee.git", branch = "master", features = ["full"] }
jsonrpsee-core = "0.15.1"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
tokio = { version = "1.16", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde_json = { version = "1" }
tower-http = { version = "0.3.4", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
hyper = "0.14.20"
console-subscriber = "0.1.8"
log = "0.4"

