[package]
name = "tungstenite-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-tungstenite = "0.17.2"
log = "0.4"
futures-util = { version = "0.3", default-features = true, features = ["sink", "std"] }
tokio = { version = "1.0.0", default-features = false, features = ["io-std", "macros", "net", "rt-multi-thread", "time"] }
env_logger = "0.9"
url = "2.0.0"
futures-channel = "0.3.24"

